# AI-Agent-Benchmarking

./: README.md  pyproject.toml
src/: cli_menu.py  constants.py
src/config/templates/: experiment_run.yaml  experiment_run.yaml.j2
src/llm_tools/: __init__.py
src/llm_tools/web_browser/: __init__.py  agent_browser.py  ai_prompt.md  browser_manager.py  main.py  pydoll_api_illustration.py  temp.py  tools.py  web_browser.py  web_browser_agent_compatible.py
src/llm_tools/web_browser/examples/: main.py  manual_exploration.py  openai.py
src/llm_tools/web_browser/prompts/: ai_prompt.md  proposed_architecure.md
