[project]
name = "ai-agent-benchmarking"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Joseph Bolton", email = "joseph.jazz.bolton@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "html2text>=2025.4.15",
    "pydoll-python>=2.8.0",
    "questionary>=2.1.1",
]
